Fix profile pictures not showing on profile page

--- a/src/client/src/styles/main.css
+++ b/src/client/src/styles/main.css
@@ -263,7 +263,7 @@
   height: 100%;
 }
 
-.profilekPicture--small {
+.profilePicture--small {
   width: 28px;
   height: 28px;
 }
